--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:g+Wl/Y5jH5TjboNEkjv4QLToefJkWQDAV6qxkYC7rXw=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
+ASSET_URL=/public
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -11,9 +13,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=marketers
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u587974991_marketerscodb
+DB_USERNAME=u587974991_marketerscousr
+DB_PASSWORD=crCBbFdwGJYxGn6
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
